# libxdgdesktopentry

./: .clang-format  meson.build
include/: basedir.h  desktop-entry.h  helper.h  string_helper.h  xdg_base_directory.h
include/private/: desktop-entry-parser.h  string_helper.h  xdg_base_directory.h
src/: basedir.cpp  desktop-entry-parser.cpp  desktop-entry.cpp  libxdgdesktopentry_test.cpp  xdg_base_directory.cpp
src/private/: xdg_base_directory.cpp
test/: xdgpp_test.cpp
